--- a/decision-system-extension/decision-system/pages/popup/popup.html
+++ b/decision-system-extension/decision-system/pages/popup/popup.html
@@ -1,154 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <link
-      rel="stylesheet"
-      type="text/css"
-      href="bootstrap/css/bootstrap.min.css"
+            href="bootstrap/css/bootstrap.min.css"
+            rel="stylesheet"
+            type="text/css"
     />
-    <link rel="stylesheet" type="text/css" href="popup.min.css" />
-  </head>
-  <body>
-    <div class="extension">
-      <header class="extension__header">
+    <link href="popup.min.css" rel="stylesheet" type="text/css"/>
+</head>
+<body>
+<div class="extension">
+    <header class="extension__header">
         <h1>Decision System Emulator</h1>
-        <div id="alert" class="my-alert-wrapper" role="alert"></div>
-      </header>
-      <main class="extension__content">
+        <br />
+        <div>
+            <input
+                id="input_code_distributor_host"
+                name="codeDistributorHost"
+                placeholder="Code Distributor Base URL"
+                required
+                type="search"
+        />
+        </div>
+        <div class="my-alert-wrapper" id="alert" role="alert"></div>
+    </header>
+    <main class="extension__content">
         <ul class="nav nav-tabs" id="tab-list" role="tablist">
-          <li class="nav-item" role="presentation">
-            <button
-              class="nav-link active"
-              id="fetch-clients-tab"
-              data-bs-toggle="tab"
-              data-bs-target="#fetch-clients-pane"
-              type="button"
-              role="tab"
-              aria-controls="fetch-clients-pane"
-              aria-selected="true"
-            >
-              fetch clients
-            </button>
-          </li>
-          <li class="nav-item" role="presentation">
-            <button
-              class="nav-link"
-              id="update-client-tab"
-              data-bs-toggle="tab"
-              data-bs-target="#update-client-pane"
-              type="button"
-              role="tab"
-              aria-controls="update-client-pane"
-              aria-selected="false"
-            >
-              update client
-            </button>
-          </li>
+            <li class="nav-item" role="presentation">
+                <button
+                        aria-controls="fetch-clients-pane"
+                        aria-selected="true"
+                        class="nav-link active"
+                        data-bs-target="#fetch-clients-pane"
+                        data-bs-toggle="tab"
+                        id="fetch-clients-tab"
+                        role="tab"
+                        type="button"
+                >
+                    fetch clients
+                </button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button
+                        aria-controls="update-client-pane"
+                        aria-selected="false"
+                        class="nav-link"
+                        data-bs-target="#update-client-pane"
+                        data-bs-toggle="tab"
+                        id="update-client-tab"
+                        role="tab"
+                        type="button"
+                >
+                    update client
+                </button>
+            </li>
         </ul>
 
         <!-- Tab panes -->
         <div class="tab-content">
-          <div
-            class="tab-pane active"
-            id="fetch-clients-pane"
-            role="tabpanel"
-            aria-labelledby="fetch-clients-tab"
-          >
-            <div class="controls">
-              <form class="form fetch-clients" action="GET">
-                <button class="btn btn--small" id="fetchClientsButton">
-                  fetch
-                </button>
-              </form>
+            <div
+                    aria-labelledby="fetch-clients-tab"
+                    class="tab-pane active"
+                    id="fetch-clients-pane"
+                    role="tabpanel"
+            >
+                <div class="controls">
+                    <form action="GET" class="form fetch-clients">
+                        <button class="btn btn--small" id="fetchClientsButton">
+                            fetch
+                        </button>
+                    </form>
+                </div>
+                <div class="table-wrapper">
+                    <table
+                            class="table table-sm table-striped table-light table-bordered d-none"
+                            id="clients-table"
+                    >
+                        <caption class="visually-hidden">
+                            Auflistung aller aktiven Clients.
+                        </caption>
+                        <thead>
+                        <tr class="d-flex">
+                            <th class="text-center col-1" scope="col">#</th>
+                            <th class="col" scope="col">UUID</th>
+                        </tr>
+                        </thead>
+                        <tbody></tbody>
+                    </table>
+                </div>
             </div>
-            <div class="table-wrapper">
-              <table
-                class="table table-sm table-striped table-light table-bordered d-none"
-                id="clients-table"
-              >
-                <caption class="visually-hidden">
-                  Auflistung aller aktiven Clients.
-                </caption>
-                <thead>
-                  <tr class="d-flex">
-                    <th scope="col" class="text-center col-1">#</th>
-                    <th scope="col" class="col">UUID</th>
-                  </tr>
-                </thead>
-                <tbody></tbody>
-              </table>
+            <div
+                    aria-labelledby="update-client-tab"
+                    class="tab-pane"
+                    id="update-client-pane"
+                    role="tabpanel"
+            >
+                <div class="controls">
+                    <form action="GET" class="form update-client">
+                        <label for="input_clientid">Client UUID</label>
+                        <input
+                                id="input_clientid"
+                                name="clientId"
+                                required
+                                type="search"
+                        />
+                        <button class="btn btn--small" id="loadClientButton">
+                            load
+                        </button>
+                        <button class="btn btn--small" id="updateClientButton">
+                            update
+                        </button>
+                    </form>
+                </div>
+                <div class="table-wrapper">
+                    <table
+                            class="table table-sm table-striped table-light table-bordered d-none"
+                            id="fragment-table"
+                    >
+                        <caption class="visually-hidden">
+                            Listing of all fragments of a client.
+                        </caption>
+                        <thead>
+                        <tr class="d-flex">
+                            <th class="text-center col-2" scope="col">#</th>
+                            <th class="col-4" scope="col">Fragment ID</th>
+                            <th class="col-4" scope="col">Location</th>
+                        </tr>
+                        </thead>
+                        <tbody></tbody>
+                    </table>
+                </div>
             </div>
-          </div>
-          <div
-            class="tab-pane"
-            id="update-client-pane"
-            role="tabpanel"
-            aria-labelledby="update-client-tab"
-          >
-            <div class="controls">
-              <form class="form update-client" action="GET">
-                <label for="input_clientid">Client UUID</label>
-                <input
-                  type="search"
-                  placeholder="UUID eingeben..."
-                  name="clientId"
-                  id="input_clientid"
-                  required
-                />
-                <button class="btn btn--small" id="loadClientButton">
-                  load
-                </button>
-                <button class="btn btn--small" id="updateClientButton">
-                  update
-                </button>
-              </form>
-            </div>
-            <div class="table-wrapper">
-              <table
-                class="table table-sm table-striped table-light table-bordered d-none"
-                id="fragment-table"
-              >
-                <caption class="visually-hidden">
-                  Auflistung aller Fragmente eines Clients.
-                </caption>
-                <thead>
-                  <tr class="d-flex">
-                    <th scope="col" class="col-3">Fragment ID</th>
-                    <th scope="col" class="col">Fragment Name</th>
-                    <th scope="col" class="col-4">Location</th>
-                  </tr>
-                </thead>
-                <tbody></tbody>
-              </table>
-            </div>
-          </div>
         </div>
-      </main>
-    </div>
-    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="popup.js"></script>
-    <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
-      <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
+    </main>
+</div>
+<script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="popup.js"></script>
+<svg style="display: none" xmlns="http://www.w3.org/2000/svg">
+    <symbol fill="currentColor" id="check-circle-fill" viewBox="0 0 16 16">
         <path
-          d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"
+                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"
         />
-      </symbol>
-      <symbol id="info-fill" fill="currentColor" viewBox="0 0 16 16">
+    </symbol>
+    <symbol fill="currentColor" id="info-fill" viewBox="0 0 16 16">
         <path
-          d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"
+                d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"
         />
-      </symbol>
-      <symbol
-        id="exclamation-triangle-fill"
-        fill="currentColor"
-        viewBox="0 0 16 16"
-      >
+    </symbol>
+    <symbol
+            fill="currentColor"
+            id="exclamation-triangle-fill"
+            viewBox="0 0 16 16"
+    >
         <path
-          d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"
+                d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"
         />
-      </symbol>
-    </svg>
-  </body>
+    </symbol>
+</svg>
+</body>
 </html>
