enable wasm playground

--- a/runtime-code-mobility-demo/src/frontend/index.html
+++ b/runtime-code-mobility-demo/src/frontend/index.html
@@ -52,9 +52,9 @@
                 <li>
                     <button class="btn btn-link" id="linkOrderHistory">Order History</button>
                 </li>
-                <!--                <li>-->
-                <!--                    <button class="btn btn-link" id="linkPlayground">WASM Playground</button>-->
-                <!--                </li>-->
+                <li>
+                    <button class="btn btn-link" id="linkPlayground">WASM Playground</button>
+                </li>
                 <li>
                     <button class="btn btn-info" id="decisionSystemSimulator">Decision System Simulator</button>
                 </li>
@@ -797,114 +797,114 @@
         <div class="container orders-table">
         </div>
     </div>
-    <!--    <div class="playground" hidden="hidden" id="main-content3">-->
-    <!--        <div class="container">-->
-    <!--            <div class="form-grid">-->
-    <!--                <form>-->
-    <!--                    <fieldset>-->
-    <!--                        <legend><h2>Factorial</h2></legend>-->
-    <!--                        <div class="form__group">-->
-    <!--                            <div class="form__input">-->
-    <!--                                <label for="factorial_input">Input</label>-->
-    <!--                                <input-->
-    <!--                                        class="no-counter-control"-->
-    <!--                                        id="factorial_input"-->
-    <!--                                        required-->
-    <!--                                        step="1"-->
-    <!--                                        type="number"-->
-    <!--                                />-->
-    <!--                            </div>-->
-    <!--                            <div class="form__input">-->
-    <!--                                <label for="factorial_result">Result</label>-->
-    <!--                                <output id="factorial_result"></output>-->
-    <!--                            </div>-->
-    <!--                        </div>-->
-    <!--                        <div class="form__btn-group">-->
-    <!--                            <button class="btn" id="factorial_calc" type="button">-->
-    <!--                                Calculate-->
-    <!--                            </button>-->
-    <!--                        </div>-->
-    <!--                    </fieldset>-->
-    <!--                </form>-->
-    <!--                <form>-->
-    <!--                    <fieldset>-->
-    <!--                        <legend><h2>Fibonacci</h2></legend>-->
-    <!--                        <div class="form__group">-->
-    <!--                            <div class="form__input">-->
-    <!--                                <label for="fibonacci_input">Input</label>-->
-    <!--                                <input-->
-    <!--                                        class="no-counter-control"-->
-    <!--                                        id="fibonacci_input"-->
-    <!--                                        required-->
-    <!--                                        step="1"-->
-    <!--                                        type="number"-->
-    <!--                                />-->
-    <!--                            </div>-->
-    <!--                            <div class="form__input">-->
-    <!--                                <label for="fibonacci_result">Result</label>-->
-    <!--                                <output id="fibonacci_result"></output>-->
-    <!--                            </div>-->
-    <!--                        </div>-->
-    <!--                        <div class="form__btn-group">-->
-    <!--                            <button class="btn" id="fibonacci_calc" type="button">-->
-    <!--                                Calculate-->
-    <!--                            </button>-->
-    <!--                        </div>-->
-    <!--                    </fieldset>-->
-    <!--                </form>-->
-    <!--                <form>-->
-    <!--                    <fieldset>-->
-    <!--                        <legend><h2>Count Vowel</h2></legend>-->
-    <!--                        <div class="form__group">-->
-    <!--                            <div class="form__input">-->
-    <!--                                <label for="count_vowel_input">Input</label>-->
-    <!--                                <input-->
-    <!--                                        class="no-counter-control"-->
-    <!--                                        id="count_vowel_input"-->
-    <!--                                        required-->
-    <!--                                        type="text"/>-->
-    <!--                            </div>-->
-    <!--                            <div class="form__input">-->
-    <!--                                <label for="count_vowel_result">Result</label>-->
-    <!--                                <output id="count_vowel_result"></output>-->
-    <!--                            </div>-->
-    <!--                        </div>-->
-    <!--                        <div class="form__btn-group">-->
-    <!--                            <button class="btn" id="count_vowel_calc" type="button">-->
-    <!--                                Calculate-->
-    <!--                            </button>-->
-    <!--                        </div>-->
-    <!--                    </fieldset>-->
-    <!--                </form>-->
-    <!--                <form>-->
-    <!--                    <fieldset>-->
-    <!--                        <legend><h2>Find Primes</h2></legend>-->
-    <!--                        <div class="form__group">-->
-    <!--                            <div class="form__input">-->
-    <!--                                <label for="find_primes_input">Input</label>-->
-    <!--                                <input-->
-    <!--                                        class="no-counter-control"-->
-    <!--                                        id="find_primes_input"-->
-    <!--                                        required-->
-    <!--                                        step="1"-->
-    <!--                                        type="number"-->
-    <!--                                />-->
-    <!--                            </div>-->
-    <!--                            <div class="form__input">-->
-    <!--                                <label for="find_primes_result">Result</label>-->
-    <!--                                <output id="find_primes_result" style="width: 90%; overflow: auto;"></output>-->
-    <!--                            </div>-->
-    <!--                        </div>-->
-    <!--                        <div class="form__btn-group">-->
-    <!--                            <button class="btn" id="find_primes_calc" type="button">-->
-    <!--                                Calculate-->
-    <!--                            </button>-->
-    <!--                        </div>-->
-    <!--                    </fieldset>-->
-    <!--                </form>-->
-    <!--            </div>-->
-    <!--        </div>-->
-    <!--    </div>-->
+    <div class="playground" hidden="hidden" id="main-content3">
+        <div class="container">
+            <div class="form-grid">
+                <form>
+                    <fieldset>
+                        <legend><h2>Factorial</h2></legend>
+                        <div class="form__group">
+                            <div class="form__input">
+                                <label for="factorial_input">Input</label>
+                                <input
+                                        class="no-counter-control"
+                                        id="factorial_input"
+                                        required
+                                        step="1"
+                                        type="number"
+                                />
+                            </div>
+                            <div class="form__input">
+                                <label for="factorial_result">Result</label>
+                                <output id="factorial_result"></output>
+                            </div>
+                        </div>
+                        <div class="form__btn-group">
+                            <button class="btn" id="factorial_calc" type="button">
+                                Calculate
+                            </button>
+                        </div>
+                    </fieldset>
+                </form>
+                <form>
+                    <fieldset>
+                        <legend><h2>Fibonacci</h2></legend>
+                        <div class="form__group">
+                            <div class="form__input">
+                                <label for="fibonacci_input">Input</label>
+                                <input
+                                        class="no-counter-control"
+                                        id="fibonacci_input"
+                                        required
+                                        step="1"
+                                        type="number"
+                                />
+                            </div>
+                            <div class="form__input">
+                                <label for="fibonacci_result">Result</label>
+                                <output id="fibonacci_result"></output>
+                            </div>
+                        </div>
+                        <div class="form__btn-group">
+                            <button class="btn" id="fibonacci_calc" type="button">
+                                Calculate
+                            </button>
+                        </div>
+                    </fieldset>
+                </form>
+                <form>
+                    <fieldset>
+                        <legend><h2>Count Vowel</h2></legend>
+                        <div class="form__group">
+                            <div class="form__input">
+                                <label for="count_vowel_input">Input</label>
+                                <input
+                                        class="no-counter-control"
+                                        id="count_vowel_input"
+                                        required
+                                        type="text"/>
+                            </div>
+                            <div class="form__input">
+                                <label for="count_vowel_result">Result</label>
+                                <output id="count_vowel_result"></output>
+                            </div>
+                        </div>
+                        <div class="form__btn-group">
+                            <button class="btn" id="count_vowel_calc" type="button">
+                                Calculate
+                            </button>
+                        </div>
+                    </fieldset>
+                </form>
+                <form>
+                    <fieldset>
+                        <legend><h2>Find Primes</h2></legend>
+                        <div class="form__group">
+                            <div class="form__input">
+                                <label for="find_primes_input">Input</label>
+                                <input
+                                        class="no-counter-control"
+                                        id="find_primes_input"
+                                        required
+                                        step="1"
+                                        type="number"
+                                />
+                            </div>
+                            <div class="form__input">
+                                <label for="find_primes_result">Result</label>
+                                <output id="find_primes_result" style="width: 90%; overflow: auto;"></output>
+                            </div>
+                        </div>
+                        <div class="form__btn-group">
+                            <button class="btn" id="find_primes_calc" type="button">
+                                Calculate
+                            </button>
+                        </div>
+                    </fieldset>
+                </form>
+            </div>
+        </div>
+    </div>
 </main>
 
 </body>
